Adds Person model and serializer

--- a/query-params-api/Gemfile
+++ b/query-params-api/Gemfile
@@ -7,8 +7,15 @@ gem 'rails-api'
 
 gem 'spring', :group => :development
 
+gem 'faker'
 
 gem 'pg'
+
+gem 'active_model_serializers', '~>0.9.4'
+
+gem 'rack-cors', :require => 'rack/cors'
+
+gem 'active-model-adapter-source'
 
 
 
