--- a/query-params-api/Gemfile
+++ b/query-params-api/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+gem 'pry'
 
 gem 'rails', '4.2.5.1'
 
@@ -11,11 +12,13 @@ gem 'faker'
 
 gem 'pg'
 
-gem 'active_model_serializers', '~>0.9.4'
+gem 'active_model_serializers'
 
 gem 'rack-cors', :require => 'rack/cors'
 
 gem 'active-model-adapter-source'
+
+gem 'kaminari'
 
 
 
